<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/developer_ncca_border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="#66FF99"
            android:gravity="center"
            android:text="SM2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_sm2_encrypt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm2_encrypt" />

                <Button
                    android:id="@+id/btn_sm2_decrypt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm2_decrypt" />

                <Button
                    android:id="@+id/btn_sm2_genkeypairs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="11dp"
                    android:text="@string/developer_sm2_gen_keypairs" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_sm2_no_pre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:text="@string/developer_sm2_no_pre" />

                <Button
                    android:id="@+id/btn_sm2_nopre_sign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm2_sign" />

                <Button
                    android:id="@+id/btn_sm2_nopre_verify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm2_verify" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_pre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/developer_sm2_pre" />

                <Button
                    android:id="@+id/btn_sm2_pre_sign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm2_sign" />

                <Button
                    android:id="@+id/btn_sm2_pre_verify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm2_verify" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="SM3"
            android:background="#33CC66"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_sm3_mac_verify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/developer_sm3_mac_verify" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/developer_ncca_border"
        android:orientation="horizontal">
        <TextView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="SM4"
            android:background="#66FF99"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_sm4_mac_verify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm3_mac_verify" />

                <Button
                    android:id="@+id/btn_sm4_cbc_encrypt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm4_cbc_encrypt" />

                <Button
                    android:id="@+id/btn_sm4_cbc_decrypt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm4_cbc_decrypt" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_sm4_ecb_encrypt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm4_ecb_encrypt" />

                <Button
                    android:id="@+id/btn_sm4_ecb_decrypt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_sm4_ecb_decrypt" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:background="#33CC66"
            android:text="RSA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_rsa_encrypt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_rsa_encrypt" />

                <Button
                    android:id="@+id/btn_rsa_decrypt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_rsa_decrypt" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_rsa_sign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_rsa_sign" />

                <Button
                    android:id="@+id/btn_rsa_verify"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/developer_rsa_verify" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/developer_ncca_border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="#66FF99"
            android:gravity="center"
            android:text="@string/developer_random" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_randombits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:ems="10"
                android:hint="请输入随机数位数" />

            <Button
                android:id="@+id/btn_random"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="10dp"
                android:layout_weight="3"
                android:text="@string/developer_gen_random" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="#33CC66"
            android:gravity="center"
            android:text="@string/developer_other" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_other_performance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/developer_other_performance" />
            <Button
                android:id="@+id/btn_other_128m_random"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/developer_other_gen_128M_random" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
