<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_ncca_test"
        android:padding="0dp"
        android:textSize="30sp"
        android:text="@string/developer_ncca_test"
        android:textAllCaps="false"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_j300_test"
        android:padding="0dp"
        android:textSize="30sp"
        android:text="@string/developer_j300_test"
        android:textAllCaps="false"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_study"
        android:padding="0dp"
        android:textSize="30sp"
        android:text="@string/developer_study_test"
        android:textAllCaps="false"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_qr_scan"
        android:padding="0dp"
        android:textSize="30sp"
        android:text="@string/scb_qr_scan"
        android:textAllCaps="false"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp" />
</LinearLayout>
